links de user, users i issues api
